src/test/deca/syntax/invalid/without_class/if_with_wrong_comparison_operator.deca
// Description:
//    Error usign control structure if, else, else if
//
// Result:
//    mismatched input ','
//    line 11

{
    int x = 1;
    int y = 2;
    if (x,y){
        print("Error");
    }
}